// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders index page header correctly 1`] = `
<div>
  <header
    class="sc-gKAaRy cUPzss"
  >
    <div
      class="sc-jrsJWt CRpZk"
    >
      <a
        class="sc-iCoGMd lbzBiO"
        href="/"
      >
        <h1
          class="sc-fujyAs ixfWkY"
        >
          Antti Kivi
        </h1>
      </a>
      <p>
        Helsinkiläinen yrittäjä
      </p>
    </div>
    <nav
      class="sc-bdnxRM iDTZBF"
    >
      <div
        aria-controls="primary-menu"
        aria-expanded="false"
        class="sc-gtsrHT iyLpWA"
      >
        <div
          class="sc-dlnjwi fodIaX"
        />
        <div
          class="sc-dlnjwi fodIaX"
        />
        <div
          class="sc-dlnjwi fodIaX"
        />
      </div>
      <ul
        class="sc-hKFxyN jSDNlB"
        id="primary-menu"
      >
        <li
          class="sc-eCApnc exXzti"
        >
          <a
            class="sc-jSFjdj iFcKsM"
            href="/"
          >
            Etusivu
          </a>
        </li>
        <li
          class="sc-eCApnc exXzti"
        >
          <a
            class="sc-jSFjdj iFcKsM"
            href="/ansioluettelo"
          >
            Ansioluettelo
          </a>
        </li>
      </ul>
    </nav>
  </header>
  ,
</div>
`;

exports[`Header component renders page header correctly 1`] = `
<div>
  <header
    class="sc-gKAaRy cUPzss"
  >
    <div
      class="sc-jrsJWt CRpZk"
    >
      <a
        class="sc-iCoGMd lbzBiO"
        href="/"
      >
        <p
          class="sc-pNWdM gjFOXu"
          role="heading"
        >
          Antti Kivi
        </p>
      </a>
      <p>
        Helsinkiläinen yrittäjä
      </p>
    </div>
    <nav
      class="sc-bdnxRM iDTZBF"
    >
      <div
        aria-controls="primary-menu"
        aria-expanded="false"
        class="sc-gtsrHT iyLpWA"
      >
        <div
          class="sc-dlnjwi fodIaX"
        />
        <div
          class="sc-dlnjwi fodIaX"
        />
        <div
          class="sc-dlnjwi fodIaX"
        />
      </div>
      <ul
        class="sc-hKFxyN jSDNlB"
        id="primary-menu"
      >
        <li
          class="sc-eCApnc exXzti"
        >
          <a
            class="sc-jSFjdj iFcKsM"
            href="/"
          >
            Etusivu
          </a>
        </li>
        <li
          class="sc-eCApnc exXzti"
        >
          <a
            class="sc-jSFjdj iFcKsM"
            href="/ansioluettelo"
          >
            Ansioluettelo
          </a>
        </li>
      </ul>
    </nav>
  </header>
  ,
</div>
`;
